--- a/frontend/src/views/my_borrows.html
+++ b/frontend/src/views/my_borrows.html
@@ -150,7 +150,7 @@
     <script>
     document.addEventListener("DOMContentLoaded", function () {
         console.log('[DEBUG] my_borrows.html: DOMContentLoaded');
-        const beUrl = "http://localhost:3000";
+        const beUrl = "https://be-perpusupn-601366042112.us-central1.run.app";
         let token = localStorage.getItem('accessToken');
         
         const borrowedBooksContainer = document.getElementById("borrowed-books-list-container");
