--- a/frontend/src/views/register.html
+++ b/frontend/src/views/register.html
@@ -124,7 +124,7 @@
     </div>
     <script>
     document.addEventListener('DOMContentLoaded', function () {
-        const beUrl = 'http://localhost:3000';
+        const beUrl = 'https://be-perpusupn-601366042112.us-central1.run.app';
         const form = document.getElementById('kt_sign_up_form');
         const submitBtn = document.getElementById('kt_sign_up_submit');
         const registerMessage = document.getElementById('registerMessage');
