--- a/frontend/src/views/login.html
+++ b/frontend/src/views/login.html
@@ -116,7 +116,7 @@
 
     <script>
     document.addEventListener('DOMContentLoaded', function () {
-        const beUrl = 'http://localhost:3000';
+        const beUrl = 'https://be-perpusupn-601366042112.us-central1.run.app';
         const form = document.getElementById('kt_sign_in_form');
         const submitBtn = document.getElementById('kt_sign_in_submit');
         const loginMessage = document.getElementById('loginMessage');
