--- a/frontend/src/views/books.html
+++ b/frontend/src/views/books.html
@@ -252,7 +252,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         console.log('[DEBUG] books.html: DOMContentLoaded, skrip Mulai Berjalan.');
 
-        const beUrl = "http://localhost:3000";
+        const beUrl = "https://be-perpusupn-601366042112.us-central1.run.app";
         let token = localStorage.getItem('accessToken');
         
         const bookListContainer = document.getElementById("book-list-container");
