--- a/frontend/src/views/register.html
+++ b/frontend/src/views/register.html
@@ -8,8 +8,10 @@
     <meta property="og:locale" content="id_ID" />
     <link rel="shortcut icon" href="public/common/img/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
-    <link href="public/metronic/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="public/metronic/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="../../../public/metronic/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="../../../public/metronic/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="../../../public/common/css/style.css" rel="stylesheet" type="text/css" />
+
     <style>
         /* CSS Kustom untuk tampilan login/register (SAMA DENGAN LOGIN.HTML) */
         body.app-blank {
@@ -124,7 +126,7 @@
     </div>
     <script>
     document.addEventListener('DOMContentLoaded', function () {
-        const beUrl = 'https://be-perpusupn-601366042112.us-central1.run.app';
+        const beUrl = 'http://localhost:3000';
         const form = document.getElementById('kt_sign_up_form');
         const submitBtn = document.getElementById('kt_sign_up_submit');
         const registerMessage = document.getElementById('registerMessage');
